Fix jumping to team

--- a/frontend/src/scss/_global.scss
+++ b/frontend/src/scss/_global.scss
@@ -2,7 +2,7 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url('https://bafybeifr3fpugfxbb2aru7codej5qc2mwx2cghjfpdt22z5mmii7s7zggi.ipfs.w3s.link/bg.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0)), url('https://cloudflare-ipfs.com/ipfs/bafybeifr3fpugfxbb2aru7codej5qc2mwx2cghjfpdt22z5mmii7s7zggi/bg.jpg');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
